# vpd111.api.com/app/Http/Controllers/API/AuthController.php
@@ -153,4 +153,97 @@ class AuthController extends Controller
 
 
 
+    /**
+     * Redirect the user to the OAuth Provider.
+     *
+     * @param  string  $provider
+     * @return \Illuminate\Http\RedirectResponse
+     */
+
+    /**
+     * @OA\Post(
+     *     tags={"Auth"},
+     *     path="/api/oauth/{provider}",
+     *     summary="Redirect the user to the OAuth Provider.",
+     *     operationId="redirectToProvider",
+     *     @OA\Parameter(
+     *         name="provider",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         ),
+     *         description="OAuth provider name."
+     *     ),
+     *     @OA\Response(
+     *         response=302,
+     *         description="Redirect to OAuth Provider."
+     *     )
+     * )
+     */
+    public function redirectToProvider($provider)
+    {
+        return Socialite::driver($provider)->redirect();
+    }
+
+    /**
+     * Obtain the user information from the OAuth Provider.
+     *
+     * @param  string  $provider
+     * @return \Illuminate\Http\JsonResponse
+     */
+
+    /**
+     * @OA\Get(
+     *     tags={"Auth"},
+     *     path="/api/oauth/{provider}/callback",
+     *     summary="Obtain the user information from the OAuth Provider.",
+     *     operationId="handleProviderCallback",
+     *     @OA\Parameter(
+     *         name="provider",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         ),
+     *         description="OAuth provider name."
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User information obtained from the OAuth Provider.",
+     *         @OA\MediaType(
+     *             mediaType="application/json"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unable to authenticate."
+     *     )
+     * )
+     */
+    public function handleProviderCallback($provider)
+    {
+        try {
+            $user = Socialite::driver($provider)->user();
+        } catch (\Exception $e) {
+            return response()->json(['error' => 'Unable to authenticate.'], Response::HTTP_UNAUTHORIZED);
+        }
+
+        $existingUser = User::where('email', $user->getEmail())->first();
+
+        if ($existingUser) {
+            $token = auth()->login($existingUser);
+        } else {
+            $newUser = User::create([
+                'name' => $user->getName(),
+                'email' => $user->getEmail(),
+                'password' => bcrypt(str_random(16)),
+            ]);
+
+            $token = auth()->login($newUser);
+        }
+
+        return response()->json(['token' => $token], Response::HTTP_OK);
+    }
+
 }
